Fixed wrapping for col-small-6

--- a/src/scss/core/_base/_grid.scss
+++ b/src/scss/core/_base/_grid.scss
@@ -82,6 +82,13 @@ nav > header {
 
 .cui-col-sm-6 {
     width: 50%;
+
+    // Make sure every column that begins a new "row" clears the elements before it.
+    // E.g. if there are four cols inside a row, and the first col is tall, the third col would not wrap down to a new line as intended
+    //TODO: Copy this practice for other classes (e.g. every 4th col-sm-4)
+    &:nth-child(2n+3) {
+        clear: both;
+    }
 }
 
 .cui-col-sm-5 {
